--- a/thesis/Makefile
+++ b/thesis/Makefile
@@ -1,16 +1,17 @@
 
 THESIS = thesis
 
-pdf: $(THESIS)
+pdf: $(THESIS).pdf 
 
 view: pdf
 	evince $(THESIS).pdf
 
 
-$(THESIS): $(THESIS).bbl 
+$(THESIS).pdf: *.tex 
 	for number in 1 2 ; do \
-		pdflatex $@.tex; \
+		pdflatex $(THESIS).tex; \
 	done
+
 
 clean:
 	@rm -f *.log *.aux *.dvi *.bbl *.blg *.ilg *.toc *.lof *.lot *.idx *.ind *.out *.brf *.html *.btmp *.itmp *.rerun *.glo *.gls
@@ -19,8 +20,8 @@ clean:
 	bibtex $(THESIS)
 
 %.aux: %.tex
-	pdflatex $(THESIS)
+		pdflatex $(THESIS).tex
 
-%.ind: %.tex %.aux
-	makeindex $(THESIS)
+#%.ind: %.tex %.aux
+#	makeindex $(THESIS)
 
