after Petr Skoda check. Before print (hope nr.2)

--- a/thesis/Makefile
+++ b/thesis/Makefile
@@ -16,6 +16,9 @@ $(THESIS).pdf: *.bbl *.tex
 clean:
 	@rm -f *.log *.aux *.dvi *.bbl *.blg *.ilg *.toc *.lof *.lot *.idx *.ind *.out *.brf *.html *.btmp *.itmp *.rerun *.glo *.gls *.pdf
 
+push:
+	scp thesis.pdf vazny@crab.physics.muni.cz:public_html/diplomka/
+
 %.bbl: %.aux
 	pdflatex $(THESIS).tex
 	bibtex $(THESIS)
